# SkyrimSE-DynamicBartering

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMMIT_MSG.tmp  cursor_skyrim_dynamic_bartering_skse_pl.md  features.md  generate_button_icons.py  generate_cart_swf.py  generate_glyph_icons.py  generate_prompt_glyph_swfs.py  generate_swf.py  process_cancel_icon.py  swf_validate.py  vcpkg.json
assets/fonts/Quill - Realistic Font Replacer/fomod/: ModuleConfig.xml  info.xml
assets/fonts/Quill - Realistic Font Replacer/fontlib/: asteroidea.swf  lecker.swf  linbiolinum_rb.swf  mops.swf  rosemary roman.swf  spartwell.swf  theworldisyours_bold.swf  upperhandwritten.swf  valleyforgeb.swf  valleyforgei.swf
assets/fonts/Sovngarde/Sovngarde Inverted Brackets/: About Sovngarde Inverted Brackets.txt
assets/interface/DynamicBartering/: BarterCart.swf  BarterOffer.swf  glyph_prompt_b.swf  glyph_prompt_tri.swf  glyph_prompt_y.swf  icons.swf
assets/prisma/: barter_offer.css  barter_offer.html  barter_offer.js
assets/prisma/fonts/: FONTS_README.txt
chim/ext/CHIM-DynamicBartering/: globals.php  manifest.json  preprocessing.php
cmake/: headerlist.cmake  sourcelist.cmake
config/: DynamicBartering.ini  MerchantOverrides.json
data/: merchant_dispositions.json  merchant_dispositions_example_addon.json
src/: BarterManager.cpp  BarterManager.h  BarterSounds.cpp  BarterSounds.h  CartManager.cpp  CartManager.h  CounterOffer.cpp  CounterOffer.h  DealMemory.cpp  DealMemory.h  DebugLog.h  Hold.cpp  Hold.h  Hooks.cpp  Hooks.h  MerchantCategory.cpp  MerchantCategory.h  MerchantPersonality.cpp  MerchantPersonality.h  MilestoneManager.cpp  MilestoneManager.h  PCH.h  PerkDetector.cpp  PerkDetector.h  PriceCalculator.cpp  PriceCalculator.h  PriceJack.cpp  PriceJack.h  RelationshipManager.cpp  RelationshipManager.h  Settings.cpp  Settings.h  Theme.cpp  Theme.h  Tutorial.cpp  Tutorial.h  main.cpp
src/Integration/: ChimBridge.cpp  ChimBridge.h
src/Menu/: ConfigMenu.cpp  ConfigMenu.h  SKSEMenuFramework.h
src/UI/: BarterCartMenu.cpp  BarterCartMenu.h  PrismaUI.cpp  PrismaUI.h  ScaleformUI.cpp  ScaleformUI.h  UIBridge.cpp  UIBridge.h
swf_verify/scripts/frame_1/: DoAction.as
tools/: esm_index.py  verify_quest_formids.py
(+33 files in other folders)
